<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">infbox_android_g10</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="login">Login</string>
    <string name="register">Registrieren</string>
    <string name="student1">Student Maximilian Dühr, s9262497</string>
    <string name="student2">Student Philipp Waack, s3354713</string>
    <string name="infotext1">inf_box Android App</string>
    <string name="infotext2">Übung WME 2014|2015</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="namehint">Vorname, Nachname</string>
    <string name="wrongemail">Bitte eine valide Email-Adresse angeben!</string>
    <string name="emptyemail">Emailfeld darf nicht leer sein!</string>
    <string name="wrongpassword">Das Passwort ist nicht korrekt</string>
    <string name="emptypassword">Bitte Passwort eingeben</string>

</resources>
